fix: visual alignment of header, main, footer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -300,8 +300,23 @@
 
   main {
     flex: 1;
-    padding: var(--space-responsive-lg);
-    width: 100%;
+    display: grid;
+    grid-template-columns:
+      [full-start] minmax(var(--space-container-padding), 1fr)
+      [content-start] min(
+        100% - var(--space-container-padding) * 2,
+        calc(var(--max-width-container) - var(--space-container-padding) * 2)
+      )
+      [content-end] minmax(var(--space-container-padding), 1fr)
+      [full-end];
+  }
+
+  main > * {
+    grid-column: content;
+  }
+
+  main > .full-bleed {
+    grid-column: full;
   }
 }
 
